--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -8,3 +8,19 @@
   bottom: 0;
   left: 0;
 }
+
+.header {
+  background: #d9d9d9;
+  padding: 30px 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.welcome {
+  display: flex;
+  justify-content: center;
+}
+
+.padded {
+  padding: 20px 0;
+}
